<resources>
    <string name="app_name">주차장의 모든것</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="button_fragment_map_total">한눈에 보기</string>
    <string name="email_text">이메일</string>
    <string name="password_text">비밀번호</string>
    <string name="sign_up_text">회원가입</string>
    <string name="password_reset_text">패스워드 재설정</string>
    <string name="login_text">로그인</string>
    <string name="easy_login_text">간편 로그인</string>
    <string name="call_text">연락처</string>
    <string name="certification_number_text">인증번호</string>
    <string name="name_text">이름</string>
    <string name="remain_time_text">남은 시간</string>
    <string name="certification_text">인증</string>
    <string name="complete_sign_up_text">회원 가입 완료</string>

    <string name="dialog_email_blank">정확하게 기입해주세요</string>
    <string name="dialog_email_duplicated">이메일 중복</string>
    <string name="dialog_email_success">사용 가능</string>
    <string name="dialog_email_mark">특수문자는 \'\@\'와 \'\-\'만 사용가능</string>
    <string name="dialog_password_fail">정확한 패스워드를 입력해주세요</string>
    <string name="dialog_name_blank">이름을 입력해주세요</string>
    <string name="dialog_login_failed">아이디 혹은 패스워드가 틀립니다</string>
    <string name="dialog_password_invalid">적절하지 않은 패스워드입니다</string>
    <string name="dialog_email_invalid">적절한 이메일을 입력해주세요</string>

    <string name="distance_low">보고있는 지역이 너무 넓습니다.\n지도를 확대해주세요.</string>
    <string name="distance_high">보고있는 지역이 너무 좁습니다.\n지도를 축소해주세요.</string>
    <string name="map_tab_price">가격순</string>
    <string name="map_tab_distance">거리순</string>

    <string name="fragment_map_search_hint">목적지 혹은 주소 검색</string>

    <string name="internet_error">인터넷 사용이 불가능합니다.</string>
    <string name="dialog_exit_question">정말로 앱을 종료하시겠습니까?</string>
    <string name="dialog_exit_button_cancel">취소</string>
    <string name="dialog_exit_button_out">확인</string>
    <string name="text_only_share">공유</string>
    <string name="text_only_parking">일반</string>
</resources>