<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9963D"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sign_up_form"
        app:layout_constraintVertical_weight="1"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintLeft_toLeftOf="@id/logo"
            android:layout_marginTop="10dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:fontFamily="@font/line_br"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rg_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="에 "
                android:textSize="23sp"
                android:textColor="@color/white"
                android:fontFamily="@font/line_th"

                app:layout_constraintBottom_toBottomOf="@id/app_name"
                app:layout_constraintLeft_toRightOf="@id/app_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bold_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="회원가입"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:fontFamily="@font/line_br"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/app_name"
                app:layout_constraintLeft_toLeftOf="@id/app_name"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rg_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="하고"
                android:textSize="23sp"
                android:textColor="@color/white"
                android:fontFamily="@font/line_th"
                app:layout_constraintBottom_toBottomOf="@id/bold_text1"
                app:layout_constraintLeft_toRightOf="@id/bold_text1"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bold_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="편안한 주차"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:fontFamily="@font/line_br"
                app:layout_constraintLeft_toLeftOf="@+id/app_name"
                app:layout_constraintTop_toBottomOf="@id/bold_text1"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rg_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="하세요"
                android:textSize="23sp"
                android:textColor="@color/white"
                android:fontFamily="@font/line_th"
                app:layout_constraintBottom_toBottomOf="@id/bold_text2"
                app:layout_constraintLeft_toRightOf="@+id/bold_text2"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_background"
        app:layout_constraintTop_toBottomOf="@+id/logo_form"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="2.5"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="64dp"
            android:text="@string/name_text"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_input"
            android:layout_width="319dp"
            android:layout_height="40dp"
            android:background="@drawable/input_form"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/name_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_text"
            app:layout_constraintTop_toBottomOf="@id/name_input"
            app:layout_constraintLeft_toLeftOf="@id/name_text"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/input_form"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@id/name_input"
            app:layout_constraintRight_toRightOf="@+id/name_input"
            app:layout_constraintTop_toBottomOf="@id/email_text"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_text"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            app:layout_constraintLeft_toLeftOf="@id/email_text"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/input_form"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            app:layout_constraintLeft_toLeftOf="@+id/email_input"
            app:layout_constraintRight_toRightOf="@+id/email_input"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/call_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/call_text"

            app:layout_constraintTop_toBottomOf="@+id/password_input"
            app:layout_constraintLeft_toLeftOf="@+id/password_text"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/call_input"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_form"
            app:layout_constraintTop_toBottomOf="@id/call_text"
            app:layout_constraintLeft_toLeftOf="@id/password_input"
            app:layout_constraintRight_toRightOf="@+id/password_input"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/certification_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certification_number_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/call_input"
            app:layout_constraintLeft_toLeftOf="@id/call_text"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/certification_number_input"
            android:layout_width="169dp"
            android:layout_height="31dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_form"
            app:layout_constraintTop_toBottomOf="@+id/certification_number_text"
            app:layout_constraintLeft_toLeftOf="@+id/call_input"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/remain_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remain_time_text"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/certification_number_input"
            app:layout_constraintLeft_toRightOf="@id/certification_number_input"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="80dp"
            android:layout_height="31dp"

            android:background="@drawable/btn"
            android:text="@string/certification_text"
            app:layout_constraintTop_toTopOf="@id/certification_number_input"
            app:layout_constraintLeft_toRightOf="@+id/remain_time_text"
            app:layout_constraintRight_toRightOf="@id/call_input"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:text="@string/complete_sign_up_text"
            android:background="@drawable/btn"
            app:layout_constraintTop_toBottomOf="@id/certification_number_input"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>