<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="14dp"
    android:background="@drawable/dialog_background"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageview_dialog_exit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_main_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textview_dialog_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_exit_question"
        android:textColor="@color/gray_color"
        android:textSize="18sp"
        android:fontFamily="@font/kakao_otf_bold"
        app:layout_constraintTop_toBottomOf="@id/imageview_dialog_exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/constraintlayout_dialog_exit"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_dialog_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_dialog_exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dialog_exit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:text="@string/dialog_exit_button_cancel"
            android:textSize="14sp"
            android:background="@drawable/exit_dialog_cancle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_dialog_exit_out"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dialog_exit_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:text="@string/dialog_exit_button_out"
            android:textSize="14sp"
            android:background="@drawable/exit_dialog_ok"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button_dialog_exit_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>