<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.team.parking.presentation.viewmodel.UserViewModel" />

        <variable
            name="handlers"
            type="com.team.parking.presentation.fragment.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F9963D"
        tools:context=".presentation.fragment.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/login_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo_image"
                android:layout_width="127dp"
                android:layout_height="104dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.126"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.419" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logo_big1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:fontFamily="@font/line_br"
                android:text="주"
                android:textSize="35sp"
                app:layout_constraintLeft_toLeftOf="@+id/logo_image"
                app:layout_constraintTop_toTopOf="@+id/logo_image"
                tools:layout_editor_absoluteX="188dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logo_big2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/line_br"
                android:text="차장"
                android:textSize="30sp"
                app:layout_constraintLeft_toRightOf="@+id/logo_big1"
                app:layout_constraintTop_toTopOf="@+id/logo_big1"
                tools:layout_editor_absoluteX="219dp"
                tools:layout_editor_absoluteY="144dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logo_small1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/line_rg"
                android:text="의"
                android:textSize="30sp"
                app:layout_constraintLeft_toRightOf="@+id/logo_big2"
                app:layout_constraintTop_toTopOf="@+id/logo_big2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logo_small2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/line_rg"
                android:text="모든것"
                android:textSize="30sp"
                app:layout_constraintLeft_toRightOf="@+id/logo_small1"
                app:layout_constraintTop_toTopOf="@id/logo_small1"
                tools:layout_editor_absoluteX="272dp"
                tools:layout_editor_absoluteY="177dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_form"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/login_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_weight="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/line_rg"
                android:text="@string/email_text"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_input"
                android:layout_width="319dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_form"
                android:fontFamily="@font/line_br"
                android:text="@={viewModel._login_email}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/line_rg"
                android:text="@string/password_text"
                app:layout_constraintLeft_toLeftOf="@id/email_text"
                app:layout_constraintTop_toBottomOf="@id/email_input" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_form"
                android:fontFamily="@font/line_br"
                android:text="@={viewModel._login_password}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="@id/email_input"
                app:layout_constraintRight_toRightOf="@id/email_input"
                app:layout_constraintTop_toBottomOf="@id/password_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#00ff0000"
                android:fontFamily="@font/line_rg"
                android:onClick="@{()->handlers.setOnSignUp()}"
                android:text="@string/sign_up_text"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@+id/password_reset_btn"
                app:layout_constraintTop_toBottomOf="@+id/password_input" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/password_reset_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:background="#00ff0000"
                android:fontFamily="@font/line_rg"
                android:text="@string/password_reset_text"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/sign_up_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/btn"
                android:fontFamily="@font/line_rg"
                android:onClick="@{()->handlers.setOnJumoLogin()}"
                android:text="@string/login_text"
                android:textSize="15sp"

                app:flow_horizontalAlign="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_img"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/easy_login"
                app:flow_horizontalAlign="center"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_kakao"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:onClick="@{()-> handlers.setOnKakaoLogin()}"
                android:src="@drawable/ic_kakao"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ic_naver"
                app:layout_constraintTop_toBottomOf="@id/login_img" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_naver"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:onClick="@{()-> handlers.setOnNaverLogin()}"
                android:src="@drawable/ic_naver"
                app:layout_constraintLeft_toRightOf="@id/ic_kakao"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_img" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>